added task check component

--- a/training-system/src/app/components/dialog/info-dialog/info-dialog.component.html
+++ b/training-system/src/app/components/dialog/info-dialog/info-dialog.component.html
@@ -8,8 +8,8 @@
   <p>Разработчики: студенты группы 6413-020302D
   <br>Азаматов Ильдар<br>Сулименко Сергей<br>Черкасов Артем</p>
   <p class="info">Руководство пользователя</p>
-  <p><a href="././assets/guide/user-guide.html">Открыть файл в браузере</a>
-  <p><a href="././assets/guide/user-guide.html" download>Скачать файл</a>
+  <p><a href="../../../../assets/guide/user-вапвпguide.html">Открыть файл в браузере</a>
+  <p><a href="././assets/guide/help.zip" download>Скачать файл</a>
 </div>
 <mat-dialog-actions align="center">
   <button mat-button mat-dialog-close>Ок</button>
