--- a/training-system/src/app/components/tasks/task-solution/task-solution.component.html
+++ b/training-system/src/app/components/tasks/task-solution/task-solution.component.html
@@ -11,7 +11,7 @@
            style="background: #00B74A; height: 100%; font-weight: bolder;">{{item}}</div>
       <div *ngIf="item === 'Прыжок'" style="background-color: #b571c7; height: 100%; font-weight: bolder; ">{{item}}</div>
       <div *ngIf="item === 'Цикл'" style="background-color: orange; height: 100%; font-weight: bolder;" class="for-start">{{item}}
-        <input type="number" min="1" max="16" placeholder="i">
+        <input type="number" min="1" max="16" value="1" placeholder="i" disabled>
       </div>
     </div>
   </div>
